# vpn

./: README.md  backend_config.yml
ansible/: run.sh
ansible/playbooks/: configure_ca.yml  configure_client.yml  configure_server.yml  deploy_proxy.yml
ansible/plugins/modules/: cert_req.json  manage_pki.py
ansible/roles/build_ovpn/: README.md
ansible/roles/build_ovpn/tasks/: main.yml
ansible/roles/build_ovpn/templates/: sample.ovpn
ansible/roles/config_ca/defaults/: main.yml
ansible/roles/config_ca/tasks/: main.yml
ansible/roles/config_proxy/: README.md
ansible/roles/config_proxy/defaults/: main.yml
ansible/roles/config_proxy/files/: tinyproxy.Dockerfile
ansible/roles/config_proxy/tasks/: main.yml
ansible/roles/config_proxy/templates/: proxy_config.j2
backend/: config.yml  pyproject.toml  setup.py
backend/vpnaas_gateway/: README.md  main.py  test.ovpn  test_ton.py
backend/vpnaas_gateway/api/ansible/: runner.py
backend/vpnaas_gateway/api/config/: __init__.py
backend/vpnaas_gateway/api/routes/: certs.py  ton.py
backend/vpnaas_gateway/api/ton/: auth.py  contract.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
vpnaaspayment/: config.yml
vpnaaspayment/api/: package-lock.json  package.json
vpnaaspayment/api/src/: ansible_runner.ts  config.ts  index.js  index.ts  types.ts
vpnaaspayment/contracts/: README.ru.md  messages.tact  ovpn_storage_entry.tact  ovpn_storage_master.tact
vpnaaspayment/frontend/: package-lock.json  package.json
vpnaaspayment/tests/: OVPNStorageMaster.spec.ts  OvpnJetton.spec.ts
(+29 files in other folders)
