[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "vpnaas_gateway"
authors = [
    {name = "Anton Vigovskij", email = "aavigovskij@gmail.com"},
]
description = "API Gateway for VPNaaS project"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["python", "ansible"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Ansible"
]
dependencies = [
    "fastapi",
    "ansible",
    "uvicorn",
]
dynamic = ["version"]

[tool.setuptools]
packages = [
    "gateway"
]